5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1807_2568.log
== TEST (2019-06-13 10:57:59) 
-- CODE:
num = int(input())

for x in range (0,num):
	print(x*'*')
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*********
**********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:58:28) 
-- CODE:
num = int(input())

for x in range (0,num):
	print(x*'*')
	for x in range (num,0):
		print(x*'*')
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*********
**********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 10:58:39) 
-- CODE:
num = int(input())

for x in range (0,num):
	print(x*'*')
	for x in range (num,0):
		print(x*'*')
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*********
**********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:53:51) 
-- CODE:
num = int(input())

for x in range (0,num):
	print(x*'*')
for x in range (num,0):
	print(x*'*')
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*********
**********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:54:24) 
-- CODE:
num = int(input())

for x in range (0,num+1):
	print(x*'*')
for x in range (num+1,0):
	print(x*'*')
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*********
**********
***********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:54:34) 
-- CODE:
num = int(input())

for x in range (0,num+1):
	print(x*'*')

-- OUTPUT:
*
**
***
****
*****
******
*******
********
*********
**********
***********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:54:55) 
-- CODE:
num = int(input())

for x in range (0,num+1):
	print(x*'*')
for x in range (num+1,0,-1):
	print(x*'*')
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:55:17) 
-- CODE:
num = int(input())

for x in range (0,num+1):
	print(x*'*')
	for x in range (0,num+1):
		print(x*'*')
for x in range (num+1,0,-1):
	print(x*'*')
-- OUTPUT:
*
**
***
****
*****
******
*******
********
*********
**********
***********
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
**

*
**
***
****
*****
******
*******
********
*********
**********
***********
***

*
**
***
****
*****
******
*******
********
*********
**********
***********
****

*
**
***
****
*****
******
*******
********
*********
**********
***********
*****

*
**
***
****
*****
******
*******
********
*********
**********
***********
******

*
**
***
****
*****
******
*******
********
*********
**********
***********
*******

*
**
***
****
*****
******
*******
********
*********
**********
***********
********

*
**
***
****
*****
******
*******
********
*********
**********
***********
*********

*
**
***
****
*****
******
*******
********
*********
**********
***********
**********

*
**
***
****
*****
******
*******
********
*********
**********
***********
***********

*
**
***
****
*****
******
*******
********
*********
*********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:55:32) 
-- CODE:
num = int(input())

for x in range (0,num+1):
	print(x*'*')
	for x in range (0,num+1):
		print(x*'*')

-- OUTPUT:
*
**
***
****
*****
******
*******
********
*********
**********
***********
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
**

*
**
***
****
*****
******
*******
********
*********
**********
***********
***

*
**
***
****
*****
******
*******
********
*********
**********
***********
****

*
**
***
****
*****
******
*******
********
*********
**********
***********
*****

*
**
***
****
*****
******
*******
********
*********
**********
***********
******

*
**
***
****
*****
******
*******
********
*********
**********
***********
*******

*
**
***
****
*****
******
*******
********
*********
**********
***********
********

*
**
***
****
*****
******
*******
********
*********
**********
***********
*********

*
**
***
****
*****
******
*******
********
*********
**********
***********
**********

*
**
***
****
*****
******
*******
********
*********
**********
***********
***********

*
**
***
****
*****
******
*******
********
*********
*********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:56:43) 
-- CODE:
num = int(input())

for x in range (0,num+1):
	print(x*'*')
	for x in range (0,num+1):
		print(x*'o')

-- OUTPUT:
o
oo
ooo
oooo
ooooo
oooooo
ooooooo
oooooooo
ooooooooo
oooooooooo
ooooooooooo
*

o
oo
ooo
oooo
ooooo
oooooo
ooooooo
oooooooo
ooooooooo
oooooooooo
ooooooooooo
**

o
oo
ooo
oooo
ooooo
oooooo
ooooooo
oooooooo
ooooooooo
oooooooooo
ooooooooooo
***

o
oo
ooo
oooo
ooooo
oooooo
ooooooo
oooooooo
ooooooooo
oooooooooo
ooooooooooo
****

o
oo
ooo
oooo
ooooo
oooooo
ooooooo
oooooooo
ooooooooo
oooooooooo
ooooooooooo
*****

o
oo
ooo
oooo
ooooo
oooooo
ooooooo
oooooooo
ooooooooo
oooooooooo
ooooooooooo
******

o
oo
ooo
oooo
ooooo
oooooo
ooooooo
oooooooo
ooooooooo
oooooooooo
ooooooooooo
*******

o
oo
ooo
oooo
ooooo
oooooo
ooooooo
oooooooo
ooooooooo
oooooooooo
ooooooooooo
********

o
oo
ooo
oooo
ooooo
oooooo
ooooooo
oooooooo
ooooooooo
oooooooooo
ooooooooooo
*********

o
oo
ooo
oooo
ooooo
oooooo
ooooooo
oooooooo
ooooooooo
oooooooooo
ooooooooooo
**********

o
oo
ooo
oooo
ooooo
oooooo
ooooooo
oooooooo
ooooooooo
oooooooooo
ooooooooooo
***********

o
oo
ooo
oooo
ooooo
oooooo
ooooooo
oooooooo
ooooooooo
ooooooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:56:58) 
-- CODE:
num = int(input())

for x in range (0,num+1):
	print(x*'*')
for x in range (0,num+1):
	print(x*'o')

-- OUTPUT:
*
**
***
****
*****
******
*******
********
*********
**********
***********

o
oo
ooo
oooo
ooooo
oooooo
ooooooo
oooooooo
ooooooooo
oooooooooo
ooooooooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:57:58) 
-- CODE:
num = int(input())

for x in range (0,num+1):
	print(x*'*')
	


-- OUTPUT:
*
**
***
****
*****
******
*******
********
*********
**********
***********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:59:12) 
-- CODE:
num = int(input())

for x in range (0,num+1):
	print(x*'*')
for x in range (num+1,0,-1):
	print(x*'*')
	


-- OUTPUT:
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 12:59:34) 
-- CODE:
num = int(input())

for x in range (0,num+1):
	print(x*'*')
	for x in range (num+1,0,-1):
		print(x*'*')
	


-- OUTPUT:
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
**
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
***
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
****
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*****
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
******
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*******
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
********
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*********
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
**********
************
***********
*********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:00:16) 
-- CODE:
num = int(input())

for x in range (0,num+1):
	print(x*'*')
for x in range (num+1,0,-1):
	print(x*'*')
	


-- OUTPUT:
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:00:32) 
-- CODE:
num = int(input())

for x in range (0,num+1):
	print(2*x*'*')

	


-- OUTPUT:
**
****
******
********
**********
************
**************
****************
******************
********************
**********************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:00:50) 
-- CODE:
num = int(input())

for x in range (0,num+1):
	print(2*x*'*')

	


-- OUTPUT:
**
****
******
********
**********
************
**************
****************
******************
********************
**********************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:01:11) 
-- CODE:
num = int(input())

for x in range (num+1,0,-1):
	print(2*x*'*')

	


-- OUTPUT:
************************
**********************
********************
******************
****************
**************
************
**********
********
******
****
**
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:02:34) 
-- CODE:
num = int(input())

for x in range (num+1,0,-1):
	print(2*x*'*')
	for x in range (0,num+1,1):
		print(2*x*'*')

	


-- OUTPUT:
************************

**
****
******
********
**********
************
**************
****************
******************
********************
**********************
**********************

**
****
******
********
**********
************
**************
****************
******************
********************
**********************
********************

**
****
******
********
**********
************
**************
****************
******************
********************
**********************
******************

**
****
******
********
**********
************
**************
****************
******************
********************
**********************
****************

**
****
******
********
**********
************
**************
****************
******************
********************
**********************
**************

**
****
******
********
**********
************
**************
****************
******************
********************
**********************
************

**
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:03:20) 
-- CODE:
num = int(input())

for x in range (num+1,0,-1):
	print(2*x*'*' + x*'o')
-- OUTPUT:
************************oooooooooooo
**********************ooooooooooo
********************oooooooooo
******************ooooooooo
****************oooooooo
**************ooooooo
************oooooo
**********ooooo
********oooo
******ooo
****oo
**o
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:04:56) 
-- CODE:
num = int(input())

for x in range (0,num+1):
	print(2*x*'*' + x*'o')
-- OUTPUT:
**o
****oo
******ooo
********oooo
**********ooooo
************oooooo
**************ooooooo
****************oooooooo
******************ooooooooo
********************oooooooooo
**********************ooooooooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:05:22) 
-- CODE:
num = int(input())

for x in range (0,num+1):
	print(2*x*'*' + 2*x*'o')
-- OUTPUT:
**oo
****oooo
******oooooo
********oooooooo
**********oooooooooo
************oooooooooooo
**************oooooooooooooo
****************oooooooooooooooo
******************oooooooooooooooooo
********************oooooooooooooooooooo
**********************oooooooooooooooooooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:06:08) 
-- CODE:
num = int(input())
print(num*2*'*')
for x in range (0,num+1):
	print(2*x*'*' + 2*x*'o' + 2*x*'*')
-- OUTPUT:
**********************

**oo**
****oooo****
******oooooo******
********oooooooo********
**********oooooooooo**********
************oooooooooooo************
**************oooooooooooooo**************
****************oooooooooooooooo****************
******************oooooooooooooooooo******************
********************oooooooooooooooooooo********************
**********************oooooooooooooooooooooo**********************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:06:21) 
-- CODE:
num = int(input())
print(num*2*'*')
for x in range (0,num+1):
	print(2*x*'*' + 2*x*'o' + 2*x*'*')
-- OUTPUT:
**********************

**oo**
****oooo****
******oooooo******
********oooooooo********
**********oooooooooo**********
************oooooooooooo************
**************oooooooooooooo**************
****************oooooooooooooooo****************
******************oooooooooooooooooo******************
********************oooooooooooooooooooo********************
**********************oooooooooooooooooooooo**********************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:07:19) 
-- CODE:
num = int(input())
print(num*2*'*')
for x in range (0,num+1):
	print(x*x*'*' + x*x*'o' + x*x*'*')
-- OUTPUT:
**********************

*o*
****oooo****
*********ooooooooo*********
****************oooooooooooooooo****************
*************************ooooooooooooooooooooooooo*************************
************************************oooooooooooooooooooooooooooooooooooo************************************
*************************************************ooooooooooooooooooooooooooooooooooooooooooooooooo*************************************************
****************************************************************oooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo****************************************************************
*********************************************************************************ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo*********************************************************************************
****************************************************************************************************oooooooooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:08:31) 
-- CODE:
num = int(input())
print(num*2*'*')
for x in range (0,num+1):
	print(x*num*'*' + 2*x*'o' + num*x*'*')
-- OUTPUT:
**********************

***********oo***********
**********************oooo**********************
*********************************oooooo*********************************
********************************************oooooooo********************************************
*******************************************************oooooooooo*******************************************************
******************************************************************oooooooooooo******************************************************************
*****************************************************************************oooooooooooooo*****************************************************************************
****************************************************************************************oooooooooooooooo****************************************************************************************
***************************************************************************************************ooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:54:55) 
-- CODE:
num = int(input())
print(num*2*'*')
for x in range (0,num+1):
	print(x*num*'*' + 2*x*'o' + num*x*'*')
-- OUTPUT:
**********************

***********oo***********
**********************oooo**********************
*********************************oooooo*********************************
********************************************oooooooo********************************************
*******************************************************oooooooooo*******************************************************
******************************************************************oooooooooooo******************************************************************
*****************************************************************************oooooooooooooo*****************************************************************************
****************************************************************************************oooooooooooooooo****************************************************************************************
***************************************************************************************************ooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:55:15) 
-- CODE:
num = int(input())
print(num*2*'*')
for x in range (0,num+1):
	print(x*num*'*' + 2*x*'o')
-- OUTPUT:
**********************

***********oo
**********************oooo
*********************************oooooo
********************************************oooooooo
*******************************************************oooooooooo
******************************************************************oooooooooooo
*****************************************************************************oooooooooooooo
****************************************************************************************oooooooooooooooo
***************************************************************************************************oooooooooooooooooo
**************************************************************************************************************oooooooooooooooooooo
*************************************************************************************************************************oooooooooooooooooooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:55:47) 
-- CODE:
num = int(input())
print(num*2*'*')
for x in range (0,num+1):
	print(x*num*'*' + 2*x*'o' + x*num*'*')
-- OUTPUT:
**********************

***********oo***********
**********************oooo**********************
*********************************oooooo*********************************
********************************************oooooooo********************************************
*******************************************************oooooooooo*******************************************************
******************************************************************oooooooooooo******************************************************************
*****************************************************************************oooooooooooooo*****************************************************************************
****************************************************************************************oooooooooooooooo****************************************************************************************
***************************************************************************************************ooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:57:33) 
-- CODE:
num = int(input())
print(num*2*'*')
for x in range (0,num+1,-1):
	print(x*num*'*' + 2*x*'o' + x*num*'*')
-- OUTPUT:
**********************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:57:42) 
-- CODE:
num = int(input())
print(num*2*'*')
for x in range (0,num+1,-1):
	print(x*num*'*' + 2*x*'o' + x*num*'*')
-- OUTPUT:
**********************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:58:01) 
-- CODE:
num = int(input())
print(num*2*'*')
for x in range (num,0,-1):
	print(x*num*'*' + 2*x*'o' + x*num*'*')
-- OUTPUT:
**********************
*************************************************************************************************************************oooooooooooooooooooooo*************************************************************************************************************************
**************************************************************************************************************oooooooooooooooooooo**************************************************************************************************************
***************************************************************************************************oooooooooooooooooo***************************************************************************************************
****************************************************************************************oooooooooooooooo****************************************************************************************
*************************************************************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:58:30) 
-- CODE:
num = int(input())
print(num*2*'*')
for x in range (0,num+1,-1):
	print(x*num*'*' + 2*x*'o' + x*num*'*')
-- OUTPUT:
**********************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:58:34) 
-- CODE:
num = int(input())
print(num*2*'*')
for x in range (0,num+1,-1):
	print(x*num*'*' + 2*x*'o' + x*num*'*')
-- OUTPUT:
**********************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:58:41) 
-- CODE:
num = int(input())
print(num*2*'*')
for x in range (0,num+1,1):
	print(x*num*'*' + 2*x*'o' + x*num*'*')
-- OUTPUT:
**********************

***********oo***********
**********************oooo**********************
*********************************oooooo*********************************
********************************************oooooooo********************************************
*******************************************************oooooooooo*******************************************************
******************************************************************oooooooooooo******************************************************************
*****************************************************************************oooooooooooooo*****************************************************************************
****************************************************************************************oooooooooooooooo****************************************************************************************
***************************************************************************************************ooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:58:46) 
-- CODE:
num = int(input())
print(num*2*'*')
for x in range (0,num+1,1):
	print(x*num*'*' + 2*x*'o' + x*num*'*')
-- OUTPUT:
**********************

***********oo***********
**********************oooo**********************
*********************************oooooo*********************************
********************************************oooooooo********************************************
*******************************************************oooooooooo*******************************************************
******************************************************************oooooooooooo******************************************************************
*****************************************************************************oooooooooooooo*****************************************************************************
****************************************************************************************oooooooooooooooo****************************************************************************************
***************************************************************************************************ooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:58:51) 
-- CODE:
num = int(input())
print(num*2*'*')
for x in range (0,num+1,1):
	print(x*num*'*' + 2*x*'o' + x*num*'*')
-- OUTPUT:
**********************

***********oo***********
**********************oooo**********************
*********************************oooooo*********************************
********************************************oooooooo********************************************
*******************************************************oooooooooo*******************************************************
******************************************************************oooooooooooo******************************************************************
*****************************************************************************oooooooooooooo*****************************************************************************
****************************************************************************************oooooooooooooooo****************************************************************************************
***************************************************************************************************ooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 13:59:45) 
-- CODE:
num = int(input())
print(num*2*'*')
for x in range (0,num+1,1):
	print(x*num*'*' + 2*x*'o' + x*num*'*')
-- OUTPUT:
**********************

***********oo***********
**********************oooo**********************
*********************************oooooo*********************************
********************************************oooooooo********************************************
*******************************************************oooooooooo*******************************************************
******************************************************************oooooooooooo******************************************************************
*****************************************************************************oooooooooooooo*****************************************************************************
****************************************************************************************oooooooooooooooo****************************************************************************************
***************************************************************************************************ooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:00:55) 
-- CODE:
num = int(input())
print(num*2*'*')
for x in range (0,num+1,1):
	print(x*num*'*')
-- OUTPUT:
**********************

***********
**********************
*********************************
********************************************
*******************************************************
******************************************************************
*****************************************************************************
****************************************************************************************
***************************************************************************************************
**************************************************************************************************************
*************************************************************************************************************************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:01:23) 
-- CODE:
num = int(input())
print(num*2*'*')
for x in range (0,num+1,1):
	print(2*num*'*')
-- OUTPUT:
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:01:54) 
-- CODE:
num = int(input())
for x in range (0,num+1,1):
	print(2*num*'*')
-- OUTPUT:
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:01:59) 
-- CODE:
num = int(input())
for x in range (0,num+1,1):
	print(2*num*'*')
-- OUTPUT:
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:02:20) 
-- CODE:
num = int(input())
for x in range (0,num+1,1):
	print(2*num*'*')
-- OUTPUT:
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:02:42) 
-- CODE:
num = int(input())
for x in range (0,num+1,1):
	print(2*num*'*')
-- OUTPUT:
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 14:04:36) 
-- CODE:
num = int(input())
for x in range (0,num,1):
	print(2*num*'*')
-- OUTPUT:
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 15:34:19) 
-- CODE:
num = int(input())
for x in range (0,num,1):
	print(2*num*'*')
-- OUTPUT:
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
**********************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 15:34:53) 
-- CODE:
num = int(input())
for x in range (0,num,1):
	print(2*num*'*' + x*'o')
-- OUTPUT:
**********************
**********************o
**********************oo
**********************ooo
**********************oooo
**********************ooooo
**********************oooooo
**********************ooooooo
**********************oooooooo
**********************ooooooooo
**********************oooooooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 15:35:04) 
-- CODE:
num = int(input())
for x in range (0,num,1):
	print(2*num*'*' + x*'o')
-- OUTPUT:
**********************
**********************o
**********************oo
**********************ooo
**********************oooo
**********************ooooo
**********************oooooo
**********************ooooooo
**********************oooooooo
**********************ooooooooo
**********************oooooooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 15:35:08) 
-- CODE:
num = int(input())
for x in range (0,num,1):
	print(2*num*'*' + x*'o')
-- OUTPUT:
**********************
**********************o
**********************oo
**********************ooo
**********************oooo
**********************ooooo
**********************oooooo
**********************ooooooo
**********************oooooooo
**********************ooooooooo
**********************oooooooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 15:35:46) 
-- CODE:
num = int(input())
for x in range (0,num,1):
	print(2*num*'*' + 2*x*'o')
-- OUTPUT:
**********************
**********************oo
**********************oooo
**********************oooooo
**********************oooooooo
**********************oooooooooo
**********************oooooooooooo
**********************oooooooooooooo
**********************oooooooooooooooo
**********************oooooooooooooooooo
**********************oooooooooooooooooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 15:35:59) 
-- CODE:
num = int(input())
for x in range (0,num,1):
	print(2*num*'*' + 2*x*'o')
-- OUTPUT:
**********************
**********************oo
**********************oooo
**********************oooooo
**********************oooooooo
**********************oooooooooo
**********************oooooooooooo
**********************oooooooooooooo
**********************oooooooooooooooo
**********************oooooooooooooooooo
**********************oooooooooooooooooooo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 15:36:33) 
-- CODE:
num = int(input())
for x in range (0,num,1):
	print(2*num*'*' + 2*x*'o' + 2*num*'*')
-- OUTPUT:
********************************************
**********************oo**********************
**********************oooo**********************
**********************oooooo**********************
**********************oooooooo**********************
**********************oooooooooo**********************
**********************oooooooooooo**********************
**********************oooooooooooooo**********************
**********************oooooooooooooooo**********************
**********************oooooooooooooooooo**********************
**********************oooooooooooooooooooo**********************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 15:37:02) 
-- CODE:
num = int(input())
for x in range (0,num,1):
	print(num*'*' + 2*x*'o' + num*'*')
-- OUTPUT:
**********************
***********oo***********
***********oooo***********
***********oooooo***********
***********oooooooo***********
***********oooooooooo***********
***********oooooooooooo***********
***********oooooooooooooo***********
***********oooooooooooooooo***********
***********oooooooooooooooooo***********
***********oooooooooooooooooooo***********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 15:41:21) 
-- CODE:
num = int(input())
for x in range (0,num,1):
	print((num-x)*'*' + 2*x*'o' + num*'*')
	str.replace(old, new[, max])
-- ERROR:
File "XXXX", line 4
    str.replace(old, new[, max])
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 15:42:05) 
-- CODE:
num = int(input())
for x in range (0,num,1):
	print((num-x)*'*' + 2*x*'o' + num*'*')

-- OUTPUT:
**********************
**********oo***********
*********oooo***********
********oooooo***********
*******oooooooo***********
******oooooooooo***********
*****oooooooooooo***********
****oooooooooooooo***********
***oooooooooooooooo***********
**oooooooooooooooooo***********
*oooooooooooooooooooo***********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 15:42:23) 
-- CODE:
num = int(input())
for x in range (0,num,1):
	print((num-x)*'*' + 2*x*'o' + (num-x)*'*')

-- OUTPUT:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-16 15:42:33) 
-- CODE:
num = int(input())
for x in range (0,num,1):
	print((num-x)*'*' + 2*x*'o' + (num-x)*'*')

-- EXECUTION TIME:
0.895584
-- TEST CASE 1:
---- input:
11
---- correct output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
---- user output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
-- TEST CASE 2:
---- input:
19
---- correct output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
---- user output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
-- TEST CASE 3:
---- input:
26
---- correct output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo********
*******oooooooooooooooooooooooooooooooooooooo*******
******oooooooooooooooooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooooooooooooooooo*
---- user output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo**
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
